<resources>
    <string name="app_name">AndroidProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_single_view">SingleViewActivity</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="titleView">List Of Ordering</string>
    <string name="orderID">Order ID</string>
    <string name="tableNo">Table No</string>
    <string name="employeeName">Employee Name</string>
    <string name="orderTime">Order Time</string>
    <string name="totalBill">Total</string>
    <string name="backBtn">Back</string>
    <string name="payBtn">Pay</string>
    <string name="confirm">Confirm</string>
    <string name="notyet">Not Yet</string>
</resources>
